--- a/themes/default/complaint/comment.html
+++ b/themes/default/complaint/comment.html
@@ -89,9 +89,7 @@
                     }else if(json == 0){
                         layer.msg('提交失败');
                     }else{
-                        layer.msg('提交成功',{'time':1000},function(){
-                            history.go(-1);
-                        })
+                        layer.msg('提交成功')
                     }
                 }
             })
